--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', "3.12", "3.13"]
+        python-version: '3.x'
 
     steps:
       - name: 🛠 Checkout Repository
@@ -28,10 +28,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: 📦 Install dependencies
+      - name: 📦 Install dependencies (if requirements.txt exists)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "No requirements.txt found, skipping dependencies installation."; fi
 
       - name: 🔍 Run Linting (Flake8)
         run: flake8 .
