--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: '3.x'
+        python-version: '3'
 
     steps:
       - name: 🛠 Checkout Repository
